Fixed jumpy nav--responsive

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -12,7 +12,6 @@
   margin: 0;
   border-bottom: 5px solid #bada55;
   position: fixed;
-  top: 0;
   overflow: hidden;
   z-index: 999;
   -webkit-box-shadow: 0 8px 6px -6px black;
@@ -118,7 +117,6 @@
     top: -300px;
     transform: translateY(300px);
     border-bottom: 5px solid #bada55;
-    position: fixed;
     overflow: hidden;
     transition: all 0.3s;
   }
